# thejsonlogger

./: .gitignore  PACKAGE.md  README.md  pyproject.toml
src/thejsonlogger/: __init__.py  thejsonlogger.py
tests/: logging.conf
