[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "thejsonlogger"
version = "0.0.5"
authors = [
  { name="Aaron Rueth", email="arueth@gmail.com" },
]
description = "The JSON Logger"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/rueth-io/thejsonlogger"
Issues = "https://github.com/rueth-io/thejsonlogger/issues"